# Orbit

./: .gitignore  Build.lua  CMakeLists.txt  LICENSE  README.md
App/: Build-App.lua
App/src/: app.cpp
Editor/: Build-Editor.lua  Editor.vcxproj.filters
Editor/include/: EditorLayer.h
Editor/src/: Component.cpp  Component.h  EditorApp.cpp  EditorLayer.cpp  EditorLayer.h  editor.cpp
Engine/: Build-Engine.lua  Engine.vcxproj.filters
Engine/include/: MainEntry.h
Engine/include/core/: application.h  core.h  layer.h  layerManager.h  logs.h
Engine/include/editorLayer/: editorBackend.h
Engine/include/events/: keyboardEvents.h
Engine/include/platform/Vulkan/: VulkanCore.h  VulkanDevice.h  VulkanWindow.h
Engine/include/platform/imgui/: ImguiBuild.h
Engine/include/renderer/: device.h
Engine/include/window/: window.h  windowAPI.h
Engine/platform/Vulkan/: GfxVkCommandBuffers.cpp  GfxVkCommandBuffers.h  GfxVkRenderPassRenderer.cpp  GfxVkRenderPassRenderer.h  GfxVulkanCore.h  GfxVulkanDevice.cpp  GfxVulkanDevice.h  GfxVulkanRenderer.cpp  GfxVulkanRenderer.h  GfxVulkanWindow.cpp  GfxVulkanWindow.h  VulkanCore.h  VulkanDevice.cpp  VulkanDevice.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanWindow.cpp  VulkanWindow.h
Engine/platform/Vulkan/resources/: GfxVkBindGroupLayout.h  GfxVkBindGroups.h  GfxVkBuffers.cpp  GfxVkBuffers.h  GfxVkEnums.cpp  GfxVkEnums.h  GfxVkFrameBuffers.cpp  GfxVkFrameBuffers.h  GfxVkMemory.h  GfxVkMeshes.h  GfxVkRenderPassLayout.cpp  GfxVkRenderPassLayout.h  GfxVkRenderPasses.cpp  GfxVkRenderPasses.h  GfxVkResourceManager.cpp  GfxVkResourceManager.h  GfxVkSamplers.cpp  GfxVkSamplers.h  GfxVkShaders.h  GfxVkTexture.cpp  GfxVkTextures.h  VkBindGroupLayout.h  VkBindGroups.h  VkBuffers.h  VkFrameBuffers.h  VkMeshes.h  VkRenderPassLayout.h  VkRenderPasses.h  VkResourceManager.cpp  VkResourceManager.h  VkShaders.h  VkTexture.cpp  VkTextures.h
Engine/src/: MainEntry.h
Engine/src/core/: application.cpp  application.h  assert.h  core.h  layer.cpp  layer.h  layerManager.cpp  layerManager.h  layerStack.cpp  logs.cpp  logs.h  main.cpp  timeManager.cpp  timeManager.h
Engine/src/editorLayer/: editorBackend.cpp
Engine/src/events/: appEvents.cpp  appEvents.h  event.cpp  event.h  keyboardEvents.cpp  keyboardEvents.h  mouseEvents.cpp  mouseEvents.h
Engine/src/platform/Vulkan/: VulkanCore.h  VulkanDevice.cpp  VulkanDevice.h  VulkanWindow.cpp  VulkanWindow.h
Engine/src/platform/Vulkan/resources/: VkBuffers.h
Engine/src/platform/imgui/: ImguiBuild.cpp  ImguiBuild.h
Engine/src/renderer/: commandBuffer.h  device.cpp  device.h  renderPassRenderer.h  renderer.cpp  renderer.h  resourceManager.h
Engine/src/renderer/resources/: Enums.h  FrameBuffers.h  Meshes.h  RenderPassLayouts.h  RenderPasses.h  bindGroupLayout.h  bindGroups.h  buffers.h  resourceManager.h  sampler.h  shaders.h  textures.h
Engine/src/utilities/: arena.h  cleanupQueue.h  handles.h  jobDispathcer.cpp  jobDispathcer.h  pools.h  ringBuffer.h  span.h
Engine/src/window/: window.cpp  window.h  windowAPI.cpp
Engine/src/workers/: jobDispathcer.cpp  jobDispathcer.h
Scripts/: conanfile.py  setup.py  setupPremake.py  setupVulkan.py
